# SG-Service

./: .gitignore  .gitreview  .testr.conf  README.md  groups  install.md  project.config  reqiurements.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
agent/wormhole/: requirements.txt
agent/wormhole/wormhole/: routers.py  sgagents.py  volumes.py
agent/wormholeclient/: setup.cfg
agent/wormholeclient/wormholeclient/: client.py
etc/: api-paste.ini  policy.json  sgservice-api.conf  sgservice-controller-proxy.conf  sgservice-controller.conf  sgservice-proxy.conf  sgservice.conf
sgservice/: __init__.py  context.py  exception.py  i18n.py  manager.py  policy.py  rpc.py  service.py  utils.py  version.py
sgservice/api/: common.py  versions.py
sgservice/api/middleware/: auth.py  fault.py
sgservice/api/openstack/: wsgi.py
sgservice/api/v1/: backups.py  checkpoints.py  replicates.py  replications.py  router.py  snapshots.py  volumes.py
sgservice/cmd/: api.py  controller_proxy.py  manage.py  proxy.py
sgservice/common/: config.py  constants.py
sgservice/common/clients/: caa.py  cinder.py  (+3 more)
sgservice/controller/: api.py  client_factory.py  manager.py  rpcapi.py  sgdriver.py
sgservice/db/: __init__.py  api.py  base.py  migration.py
sgservice/grpc/: client.py
sgservice/objects/: __init__.py  backup.py  base.py  checkpoint.py  fields.py  replication.py  service.py  snapshot.py  volume.py  volume_attachment.py
sgservice/proxy/: sgservice_proxy.py
sgservice/tests/: base.py  test_sgservice.py
sgservice/wsgi/: common.py  eventlet_server.py
(+44 files in other folders)
