[metadata]
name = sgservice
summary =
    Service provides SG enabled volume management and data protection across clouds
description-file =
    README.md
author = Huawei
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    sgservice

[entry_points]
console_scripts =
    sgservice-api = sgservice.cmd.api:main
    sgservice-manage = sgservice.cmd.manage:main
    sgservice-controller = sgservice.cmd.controller:main
sgservice.database.migration_backend =
    sqlalchemy = oslo_db.sqlalchemy.migration

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = sgservice/locale
domain = sgservice

[update_catalog]
domain = sgservice
output_dir = sgservice/locale
input_file = sgservice/locale/sgservice.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sgservice/locale/sgservice.pot
